WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44583
Fix one more html5lib test case for button scoping
https://bugs.webkit.org/show_bug.cgi?id=44583
Summary
Fix one more html5lib test case for button scoping
Eric Seidel (no email)
Reported
2010-08-24 22:31:13 PDT
Fix one more html5lib test case for button scoping
Attachments
Patch
(2.80 KB, patch)
2010-08-24 22:32 PDT
,
Eric Seidel (no email)
abarth
: review+
abarth
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-08-24 22:32:12 PDT
Created
attachment 65370
[details]
Patch
Adam Barth
Comment 2
2010-08-24 22:32:57 PDT
Comment on
attachment 65370
[details]
Patch This matches the spec, I trust.
Eric Seidel (no email)
Comment 3
2010-08-24 22:35:29 PDT
Committed
r65981
: <
http://trac.webkit.org/changeset/65981
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug