2010-08-24  Dumitru Daniliuc  <dumi@chromium.org>

Unreviewed, Chromium's LayoutTestController does not implement markerTextForListItem() yet.

        * platform/chromium/test_expectations.txt:
2010-08-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix one more html5lib test case for button scoping
        https://bugs.webkit.org/show_bug.cgi?id=44583

        I <3 test driven development.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTagForInBody):

Canonical link: https://commits.webkit.org/56760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65981 268f45cc-cd09-0410-ab3c-d52691b4dbfc