WebCore/html/HTMLTreeBuilder.cpp
@@ -923,7 +923,7 @@ void HTMLTreeBuilder::processStartTagForInBody(AtomicHTMLToken& token)
         return;
     }
     if (token.name() == tableTag) {
-        if (m_document->parseMode() != Document::Compat && m_tree.openElements()->inScope(pTag))
+        if (m_document->parseMode() != Document::Compat && m_tree.openElements()->inButtonScope(pTag))
             processFakeEndTag(pTag);
         m_tree.insertHTMLElement(token);
         m_framesetOk = false;
